--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "mocha": "^3.3.0",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
