--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "knex": "^0.13.0",
+    "knex-seed-file": "^0.3.1",
     "pg": "^6.1.5"
   },
   "devDependencies": {
