--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/wlffann/craft_beer_api#readme",
   "dependencies": {
     "express": "^4.15.2",
+    "fs": "0.0.1-security",
+    "github-flavored-markdown": "^1.0.1",
     "knex": "^0.13.0",
     "knex-seed-file": "^0.3.1",
     "pg": "^6.1.5"
